Fixing documents tabs (aligning)

--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -1483,7 +1483,7 @@ div-size{
 .flex-row{
     display: flex;
     flex-flow: row;
-    justify-content: center;
+
 }
 /*Конец стилей страницы входа*/
 /*Начало главной страницы новостей*/
